[package]
name = "mini-bchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/lib.rs"
name = "main"

[dependencies]
anyhow = "1.0.69"
borsh = "0.10.2"
ed25519-dalek = "1.0.1"
libp2p = { version = "0.51.0", features = ["full"] }
rand = "0.7.0"
rocksdb = "0.20.1"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
